# thermal_mlx90640_cpp

./: CMakeLists.txt  README.md
include/: MLX90640_API.h  MLX90641_API.h  MLX9064X_I2C_Driver.h  thermal_mlx9064x.hpp
src/: MLX90640_API.cpp  MLX9064X_I2C_Driver.cpp  main.cpp  thermal_mlx9064x.cpp
